--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.48.1",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hotjar": "^6.3.1"
+    "react-hotjar": "^6.3.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
